@@ -170,6 +170,23 @@ namespace C
                     project.RequiresProject(requiredProject);
                 }
             }
+            // any non-C module projects should be order-only dependencies
+            foreach (var dependent in sender.Dependents)
+            {
+                if (null == dependent.MetaData)
+                {
+                    continue;
+                }
+                if (dependent is C.CModule)
+                {
+                    continue;
+                }
+                var dependentProject = dependent.MetaData as VSSolutionBuilder.VSProject;
+                if (null != dependentProject)
+                {
+                    project.RequiresProject(dependentProject);
+                }
+            }
         }
     }
 }
